Bug 258685 - Account xml load: error if startup-/shutdown-/running account is different.
Summary: Account xml load: error if startup-/shutdown-/running account is different.
Status: RESOLVED FIXED
Alias: None
Product: kplato
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR major
Target Milestone: ---
Assignee: Dag Andersen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-03 15:00 UTC by Dag Andersen
Modified: 2010-12-03 15:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dag Andersen 2010-12-03 15:00:56 UTC
Version:           unspecified
OS:                Linux

The task reference to the account may be set to 0 if startup-/shutdown-/running account references different accounts.

Reproducible: Always
Comment 1 Dag Andersen 2010-12-03 15:44:26 UTC
SVN commit 1203296 by danders:

Fix data loss on xml load.
BUG: 258685 


 M  +6 -3      kptaccount.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1203296