------------------------------------------------------------------------ r1203267 | rempt | 2010-12-03 14:20:03 +0100 (Fri, 03 Dec 2010) | 1 line Changed paths:    M /trunk/koffice/krita/ui/kis_aboutdata.h

correct url for animtim

------------------------------------------------------------------------
r1203281 | uzak | 2010-12-03 14:43:32 +0100 (Fri, 03 Dec 2010) | 2 lines
Changed paths:
   M /trunk/koffice/filters/kpresenter/powerpoint/pptstyle.cpp

PPT: Fine tuned processing of the TextCFException structure for MS Office 2007.


------------------------------------------------------------------------
r1203296 | danders | 2010-12-03 15:44:01 +0100 (Fri, 03 Dec 2010) | 3 lines
Changed paths:
   M /trunk/koffice/kplato/libs/kernel/kptaccount.cpp

Fix data loss on xml load.
BUG: 258685 


------------------------------------------------------------------------
r1203344 | bero | 2010-12-03 18:08:24 +0100 (Fri, 03 Dec 2010) | 2 lines
Changed paths:
   M /trunk/koffice/krita/ui/kisexiv2/kis_exif_io.cpp

Fix build with exiv2 0.21



svn path=/branches/work/koffice-essen/; revision=1203491